[metadata]
name = happy_tools
author = Jan Kukacka
version = 1.0.0
description = Handy utilities to make everyday Python users happy.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jankukacka/happy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.5

install_requires =
    matplotlib
    numpy
    scipy

[options.packages.find]
where = src
